lesson8/k8s-log-analytics/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-analytics
  labels:
    name: log-analytics
    monitoring: enabled
